--- a/.env-copy
+++ b/.env-copy
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=10.0.0.40
 DB_PORT=3306
 DB_DATABASE=db_trifectaapps
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=trifecta
+DB_PASSWORD=trifecta
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
