--- a/.env-copy
+++ b/.env-copy
@@ -13,7 +13,7 @@ DB_HOST=10.0.0.40
 DB_PORT=3306
 DB_DATABASE=db_trifectaapps
 DB_USERNAME=trifecta
-DB_PASSWORD=trifecta
+DB_PASSWORD=admin
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
